# gnome-dvb-daemon

./: .bzrignore  .gitignore  MAINTAINERS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  gen-changelog.py  gnome-dvb-daemon.doap
client/: Makefile.am  dvb-client.py  dvb-preferences.py  gnome-dvb-control  gnome-dvb-control.in  gnome-dvb-control.py  gnome-dvb-preferences.py  gnome-dvb-schedule.py  gnome-dvb-setup  gnome-dvb-setup.in  gnome-dvb-setup.py  gnome-dvb-timers.py  gnomedvb.py  gui.py  preferences.py  wizard.py
client/gnomedvb/: Callback.py  DBusWrapper.py  DVBModel.py  Device.py  Makefile.am  __init__.py  defs.py.in
client/gnomedvb/preferences/: Makefile.am
client/gnomedvb/preferences/model/: DVBModel.py  Device.py
client/gnomedvb/preferences/ui/: DeviceGroupsView.py  Dialogs.py  Frame.py  Makefile.am  Preferences.py
client/gnomedvb/timers/: Makefile.am
client/gnomedvb/timers/ui/: CalendarDialog.py  Makefile.am  RecorderWindow.py  TimerDialog.py
client/gnomedvb/udev/: __init__.py  _dvbudevmodule.c
client/gnomedvb/ui/: Makefile.am
client/gnomedvb/ui/channellisteditor/: ChannelListEditorDialog.py
client/gnomedvb/ui/controlcenter/: ControlCenterWindow.py  Makefile.am
client/gnomedvb/ui/preferences/: DeviceGroupsView.py  Dialogs.py  Frame.py  Makefile.am  Preferences.py
client/gnomedvb/ui/recordings/: DetailsDialog.py  Makefile.am  RecordingsDialog.py
client/gnomedvb/ui/timers/: CalendarDialog.py  EditTimersDialog.py  Makefile.am  MessageDialogs.py  TimerDialog.py
client/gnomedvb/ui/widgets/: CellRendererDatetime.py  ChannelGroupsStore.py  ChannelGroupsView.py  ChannelsGroupStore.py  ChannelsGroupView.py  ChannelsStore.py  ChannelsView.py  DateTime.py  DetailsDialog.py  Frame.py  HelpBox.py  Makefile.am  RecordingsStore.py  RecordingsView.py  RunningNextStore.py  RunningNextView.py  SchedulePaned.py  ScheduleStore.py  ScheduleView.py
client/gnomedvb/ui/wizard/: Makefile.am  SetupWizard.py  __init__.py
client/gnomedvb/ui/wizard/pages/: AdaptersPage.py  BasePage.py  ChannelScanPage.py  InitialTuningDataPage.py  IntroPage.py  Makefile.am  SaveChannelListPage.py  SetupDevicePage.py  SummaryPage.py
client/gnomedvb/userdirs/: Makefile.am  __userdirsmodule.c
client/gnomedvb/widgets/: ChannelsStore.py  ChannelsView.py  DVBModel.py  EditTimersDialog.py  Makefile.am  ScheduleStore.py  ScheduleView.py
client/gnomedvb/wizard/: Makefile.am  SetupWizard.py
client/gnomedvb/wizard/pages/: AdaptersPage.py  BasePage.py  ChannelScanPage.py  InitialTuningDataPage.py  IntroPage.py  Makefile.am  SaveChannelListPage.py  SummaryPage.py
client/grilo-plugin/: Makefile.am  gdd-channel-list.c  gdd-channel-list.h  gdd-device-group.c  gdd-device-group.h  gdd-manager.c  gdd-manager.h  grl-dvb-daemon-exporter.c  grl-dvb-daemon-exporter.h  grl-dvb-daemon-source.c  grl-dvb-daemon-source.h  grl-dvb-daemon.xml
client/rhythmbox-plugin/: Makefile.am  dvb-rhythm.py  dvb-rhythm.rb-plugin.in
client/totem-plugin/: Makefile.am  dvb-daemon.plugin.in  dvb-daemon.py  dvb-daemon.totem-plugin.in
data/: Makefile.am  gnome-dvb-control.desktop.in.in  gnome-dvb-setup.desktop.in.in  org.gnome.DVB.service.in  org.gnome.UPnP.MediaServer1.DVBDaemon.service  org.gnome.UPnP.MediaServer1.DVBDaemon.service.in  org.gnome.UPnP.MediaServer2.DVBDaemon.service.in
data/icons/: Makefile.am
m4/: gstreamer.m4  python.m4
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  fur.po  gl.po  gnome-dvb-daemon.pot  hr.po  hu.po  id.po  it.po  lt.po  lv.po  nb.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  te.po  tr.po  (+2 more)
src/: ChangeType.vala  Channel.vala  ChannelFactory.vala  ChannelGroup.vala  ChannelList.vala  ChannelListReader.vala  ChannelListWriter.vala  ConfigStore.vala  Constants.vala  Device.vala  DeviceGroup.vala  EPGScanner.vala  EPGStore.vala  Event.vala  EventStorage.vala  Factory.vala  GConfStore.vala  IDBusChannelList.vala  IDBusDeviceGroup.vala  IDBusManager.vala  IDBusRecorder.vala  IDBusRecordingsStore.vala  IDBusSchedule.vala  Logging.vala  Main.vala  Manager.vala  MpegTsEnums.vala  OverlapType.vala  Parameter.vala  Recorder.vala  Recording.vala  RecordingsStore.vala  ScannedItem.vala  Scanner.vala  Schedule.vala  Settings.vala  SqliteConfigTimersStore.vala  SqliteEPGStore.vala  Timer.vala  TimersStore.vala  (+1 more)
src/Cable/: CableChannel.vala  CableRecorder.vala  CableScanner.vala
src/Parameters/: DvbCEuropeParameter.vala  DvbSParameter.vala  DvbTParameter.vala
src/Satellite/: SatelliteChannel.vala  SatelliteRecorder.vala  SatelliteScanner.vala
src/Scanner/: CableScanner.vala  ChannelListWriter.vala  Scanner.vala
src/Terrestrial/: TerrestrialChannel.vala  TerrestrialRecorder.vala  TerrestrialScanner.vala
src/database/: ConfigStore.vala  EPGStore.vala  SqlError.vala  TimersStore.vala
src/database/sqlite/: SqliteConfigTimersStore.vala  SqliteDatabase.vala  SqliteEPGStore.vala  SqliteUtils.vala
src/dbus/: IDBusChannelList.vala  IDBusDeviceGroup.vala  IDBusManager.vala  IDBusRecorder.vala  IDBusRecordingsStore.vala  IDBusScanner.vala  IDBusSchedule.vala
src/io/: ChannelListReader.vala  ChannelListWriter.vala  RecordingReader.vala  RecordingWriter.vala  ScanningListReader.vala
src/livetv/: Server.vala
src/rtsp/: MediaFactory.vala  MediaMapping.vala  Server.vala
src/rygel/: Interfaces.vala  Interfaces2.vala  Services.vala  Services2.vala
tests/: test-dvb-daemon.py
vapi/: config.vapi  cstuff.c  cstuff.h  cutils.vapi  gstreamer-mpegts-1.0.vapi
