ACLOCAL_AMFLAGS = -I m4

NULL = 

SUBDIRS = \
	client \
	data \
	po \
	$(NULL)

bin_PROGRAMS = gnome-dvb-daemon

gnome_dvb_daemon_SOURCES = \
	src/Cable/CableChannel.vala \
	src/Cable/CableScanner.vala \
	src/Satellite/SatelliteChannel.vala \
	src/Satellite/SatelliteScanner.vala \
	src/Terrestrial/TerrestrialChannel.vala \
	src/Terrestrial/TerrestrialScanner.vala \
	src/database/sqlite/SqliteDatabase.vala \
	src/database/sqlite/SqliteUtils.vala \
	src/database/sqlite/SqliteConfigTimersStore.vala \
	src/database/sqlite/SqliteEPGStore.vala \
	src/database/SqlError.vala \
	src/database/ConfigStore.vala \
	src/database/EPGStore.vala \
	src/database/TimersStore.vala \
	src/dbus/IDBusChannelList.vala \
	src/dbus/IDBusDeviceGroup.vala \
	src/dbus/IDBusManager.vala \
	src/dbus/IDBusRecorder.vala \
	src/dbus/IDBusRecordingsStore.vala \
	src/dbus/IDBusScanner.vala \
	src/dbus/IDBusSchedule.vala \
	src/io/ChannelListReader.vala \
	src/io/ChannelListWriter.vala \
	src/io/RecordingReader.vala \
	src/io/RecordingWriter.vala \
	src/ChangeType.vala \
	src/Channel.vala \
	src/ChannelFactory.vala \
	src/ChannelGroup.vala \
	src/ChannelList.vala \
	src/Constants.vala \
	src/Device.vala \
	src/DeviceGroup.vala \
	src/EPGScanner.vala \
	src/Event.vala \
	src/EventStorage.vala \
	src/Factory.vala \
	src/Logging.vala \
	src/Main.vala \
	src/Manager.vala \
	src/MpegTsEnums.vala \
	src/OverlapType.vala \
	src/Recorder.vala \
	src/Recording.vala \
	src/RecordingsStore.vala \
	src/Scanner.vala \
	src/ScannedItem.vala \
	src/Schedule.vala \
	src/Settings.vala \
	src/Timer.vala \
	src/Utils.vala \
	src/rtsp/MediaFactory.vala \
	src/rtsp/MediaMapping.vala \
	src/rtsp/Server.vala \
	src/rygel/Interfaces2.vala \
	src/rygel/Services2.vala \
	$(NULL)

vala_pkgs = \
	--pkg gio-2.0 \
	--pkg gstreamer-1.0 \
	--pkg gee-0.8 \
	--pkg sqlite3 \
	--pkg gstreamer-rtsp-server-1.0 \
	--pkg gudev-1.0 \
	$(NULL)
    
own_pkgs = \
	--pkg config \
	--pkg cutils
	
gnome_dvb_daemon_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	$(GNOME_DVB_DAEMON_CFLAGS) \
	$(GST_CFLAGS) \
	$(GUDEV_CFLAGS) \
	-I$(top_srcdir)/vapi \
	-include $(CONFIG_HEADER) \
	$(NULL)

AM_VALAFLAGS = --target-glib=2.32 --vapidir=$(top_srcdir)/vapi $(own_pkgs) $(vala_pkgs) --basedir $(top_srcdir)

gnome_dvb_daemon_LDFLAGS = \
	-Wl,--export-dynamic

gnome_dvb_daemon_LDADD = \
	$(GNOME_DVB_DAEMON_LIBS) \
	$(GST_LIBS) \
	$(GUDEV_LIBS) \
	libdvbdaemon-utils.a \
	$(NULL)

noinst_LIBRARIES = libdvbdaemon-utils.a
libdvbdaemon_utils_a_SOURCES = \
	vapi/cstuff.c \
	$(NULL)

libdvbdaemon_utils_a_CPPFLAGS = \
	$(GST_CFLAGS) \
	$(NULL)

EXTRA_DIST = \
	intltool-extract.in \
	intltool-update.in \
	intltool-merge.in \
	$(gnome_dvb_daemon_SOURCES) \
	vapi/config.vapi \
	vapi/cutils.vapi \
	vapi/cstuff.h \
	$(NULL)

DISTCLEANFILES = \
	intltool-extract \
	intltool-update \
	intltool-merge \
	po/.intltool-merge-cache \
	$(NULL)
	
dist-hook:
	@if test -d "$(srcdir)/.git"; \
		then \
			echo Creating ChangeLog && \
			( cd "$(top_srcdir)" && \
				echo '# Generated by Makefile. Do not edit.'; echo; \
				$(top_srcdir)/missing --run python gen-changelog.py ) > ChangeLog.tmp \
			&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
			|| ( rm -f ChangeLog.tmp ; \
				echo Failed to generate ChangeLog >&2 ); \
	else \
			echo A git clone is required to generate a ChangeLog >&2; \
	fi
