SUBDIRS = \
	gnomedvb
	
if ENABLE_TOTEM
SUBDIRS += totem-plugin
endif
	
gnomedvbbindir = $(bindir)
gnomedvbbin_SCRIPTS = \
	gnome-dvb-preferences.py \
	gnome-dvb-setup.py \
	gnome-dvb-schedule.py \
	gnome-dvb-timers.py

EXTRA_DIST = \
	gnome-dvb-preferences.py \
	gnome-dvb-setup.py \
	gnome-dvb-schedule.py \
	gnome-dvb-timers.py
